# rrmagnobot

./: README.md
rrmagnobot_gazebo_force/: CMakeLists.txt  package.xml
rrmagnobot_gazebo_force/include/rrmagnobot_gazebo_force/: rrmagnobot_gazebo_force_plugin.hpp
rrmagnobot_gazebo_force/src/: rrmagnobot_gazebo_force_plugin.cpp
rrmagnobot_simulation/: CMakeLists.txt  package.xml
rrmagnobot_simulation/config/: controllers.yaml  gazebo_params.yaml
rrmagnobot_simulation/description/: camera.urdf.xacro  controller.urdf.xacro  material.urdf.xacro  rrmagnobot.urdf.xacro  rrmagnobot_body.urdf.xacro
rrmagnobot_simulation/launch/: general.launch.py  robot_state.launch.py
rrmagnobot_simulation/meshes/Reser/: model.config  model.sdf
rrmagnobot_simulation/worlds/: world.world
