<?xml version="1.0"?>
<package format="2">
  <name>rrmagnobot_gazebo_force</name>
  <version>0.4.9</version>
  <description>pluggin for const force attached to rrmagnobot model in gazebo classic</description>

  <maintainer email="sewa.egorov@ya.ru">Vsevolod Egorov</maintainer>
  
  <license>Apache License 2.0</license>

  <author>Vsevolod Egorov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
